--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ serde_json = "1.0.140"
 thiserror = "2.0.12"
 tokio = { version = "1", features = ["macros"] }
 tokio-util = "0.7.15"
+
+[profile.release]
+lto = true
+codegen-units = 1
