--- a/.github/workflows/build-lambda.yml
+++ b/.github/workflows/build-lambda.yml
@@ -52,15 +52,16 @@ jobs:
 
       - name: Package Lambda Function
         run: |
-          cd target/lambda/${{ github.repository }}
+          ls -lh target/lambda
+          cd target/lambda/${{ github.event.repository.name }}
           zip -r lambda.zip .
 
       - name: Set Artifact Name
         run: |
           if [ "${{ github.event.client_payload.IS_RELEASE || 'false' }}" == "true" ]; then
-            echo "ARTIFACT_NAME=${{ github.repository }}-release" >> $GITHUB_ENV
+            echo "ARTIFACT_NAME=${{ github.event.repository.name }}-release" >> $GITHUB_ENV
           else
-            echo "ARTIFACT_NAME=${{ github.repository }}-build" >> $GITHUB_ENV
+            echo "ARTIFACT_NAME=${{ github.event.repository.name }}-build" >> $GITHUB_ENV
           fi
 
       - name: Upload Build Artifact
