--- a/.github/workflows/build-lambda.yml
+++ b/.github/workflows/build-lambda.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     environment: staging
     steps:
       - name: Checkout repository
@@ -67,5 +67,5 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.repository }}-release
-          path: lambda.zip
+          name: ${{ github.event.repository.name }}-release
+          path: target/lambda/lambda.zip
