--- a/.github/workflows/build-lambda.yml
+++ b/.github/workflows/build-lambda.yml
@@ -72,4 +72,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.repository.name }}-release
-          path: ${{ github.workspace }}/target/lambda/lambda.zip
+          path: ${{ github.workspace }}/target/lambda/${{ github.event.repository.name }}/lambda.zip
