--- a/.github/workflows/build-lambda.yml
+++ b/.github/workflows/build-lambda.yml
@@ -76,12 +76,9 @@ jobs:
           else
             echo "ARTIFACT_NAME=${{ github.event.repository.name }}-build" >> $GITHUB_ENV
           fi
-      
-      - run: ls -lh target/lambda/      
-      - run: realpath target/lambda/lambda.zip
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-release
+          name: ${{ env.ARTIFACT_NAME }}
           path: ${{ github.workspace }}/target/lambda/${{ github.event.repository.name }}/lambda.zip
