--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
-          name: lambda-package
-          path: ./lambda.zip
+          name: ${{ github.event.repository.name }}-release
 
       - name: Upload to S3
         run: |
