--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -40,4 +40,5 @@ jobs:
           aws lambda update-function-code \
             --function-name ${{ vars.TARGET_LAMBDA_NAME }} \
             --s3-bucket ${{ vars.DEPLOYMENT_BUCKET_NAME }} \
+            --architectures arm64
             --s3-key ${{ github.repository }}/${{ github.ref_name }}.zip
