--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -33,12 +33,11 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 cp lambda.zip s3://${{ vars.DEPLOYMENT_BUCKET_NAME }}/${{ github.repository }}/${{ github.ref_name }}.zip
+          aws s3 cp lambda.zip s3://${{ vars.DEPLOYMENT_BUCKET_NAME }}/${{ github.event.repository.name }}/${{ github.ref_name }}.zip
 
       - name: Deploy Lambda
         run: |
           aws lambda update-function-code \
             --function-name ${{ vars.TARGET_LAMBDA_NAME }} \
             --s3-bucket ${{ vars.DEPLOYMENT_BUCKET_NAME }} \            
-            --s3-key ${{ github.repository }}/${{ github.ref_name }}.zip \
-            --architectures arm64
+            --s3-key ${{ github.event.repository.name }}/${{ github.ref_name }}.zip
